// Neta-Resume ERD — paste into https://dbdiagram.io to visualize.
// Source of truth: legacy db/migrations/*.sql through 0030, then backend/database/migrations/.

Table house {
  id smallint [pk]
  code text [unique]
  name text
  jurisdiction text   // union | state
  state_code text
}

Table term_cycle {
  id bigint [pk]
  house_id smallint [ref: > house.id]
  number int
  start_date date
  end_date date
  eci_election_id text
}

Table party { id bigint [pk]  canonical_name text  abbr text  eci_party_id text  is_active boolean }
Table party_alias { id bigint [pk]  party_id bigint [ref: > party.id]  alias text  source text }

Table source {
  id smallint [pk]
  code text [unique]
  name text
  base_url text
  license text
  trust_tier smallint
}

Table source_ref {
  id bigint [pk]
  source_id smallint [ref: > source.id]
  native_id text
  native_url text
  person_id bigint [ref: > person.id]   // NULL until resolved
  raw_name text
  raw_payload_ref text
  fetched_at timestamptz
  indexes { (source_id, native_id) [unique] }
}

Table fact_source {
  id bigint [pk]
  source_ref_id bigint [ref: > source_ref.id]
  observed_at date
  retrieved_at timestamptz
}

Table person {
  id bigint [pk]
  display_name text
  normalized_name text
  gender text
  birth_year int
  tcpd_surf_id text [unique]
  wikidata_qid text
  home_state text        // derived match feature (modal office_term state)
  relative_name text     // derived match feature (S/o|D/o|W/o from latest affidavit)
  phonetic_key text      // derived: metaphone-over-sorted-tokens key for same-sound stitcher blocking
}

Table person_name_variant {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  variant text
  source_id smallint [ref: > source.id]
  script text
}

Table office_term {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  house_id smallint [ref: > house.id]
  term_cycle_id bigint [ref: > term_cycle.id]
  constituency text
  rs_state_code text
  ls_state_code text  // seat's state: LS constituency's state, or a state-assembly member's state (MH_VS)
  membership_type text
  start_date date
  end_date date
  party_id bigint [ref: > party.id]
  status text
  source_ref_id bigint [ref: > source_ref.id]
  attendance_pct numeric              // cumulative parliamentary attendance %, PRS (NULL = rule-exempt / unknown)
  attendance_source_ref_id bigint [ref: > source_ref.id]
}

Table cabinet_post {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  title text
  body text
  start_date date
  end_date date
  source_ref_id bigint [ref: > source_ref.id]
}

Table party_affiliation {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  party_id bigint [ref: > party.id]
  joined_date date
  left_date date
  is_current boolean
  join_reason text
  leave_reason text
  detection text
  confidence smallint
  source_ref_id bigint [ref: > source_ref.id]
}

Table party_switch_event {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  from_party_id bigint [ref: > party.id]
  to_party_id bigint [ref: > party.id]
  event_date date
  narrative text
  narrative_source_ref_id bigint [ref: > source_ref.id]
  detected_from text
}

Table affidavit {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  source_ref_id bigint [ref: > source_ref.id]
  election_cycle text
  house_id smallint [ref: > house.id]
  filed_year int
  total_assets bigint
  total_liabilities bigint
  self_income bigint
  raw_url text
  relative_name text     // S/o|D/o|W/o relative printed on the affidavit (disambiguation signal)
  relation_type text     // 'father'|'spouse'|'guardian' when a specific marker is present, else null
  indexes { (person_id, election_cycle, source_ref_id) [unique] }
}

Table affidavit_line_item {
  id bigint [pk]
  affidavit_id bigint [ref: > affidavit.id]
  category text
  label text
  amount bigint
  owner text
}

Table legal_section {
  id bigint [pk]
  code_system text
  section_number text
  title text
  ipc_equivalent text
  bns_equivalent text
  base_severity text
  is_cognizable boolean
  max_punishment_years int
  indexes { (code_system, section_number) [unique] }
}

Table criminal_case {
  id bigint [pk]
  person_id bigint [ref: > person.id]
  affidavit_id bigint [ref: > affidavit.id]
  source_ref_id bigint [ref: > source_ref.id]
  case_number text
  court text
  filed_year int
  status text
  is_convicted boolean
  severity text
  severity_rule_version text
  cnr_number text
  court_source_ref_id bigint [ref: > source_ref.id]
}

Table case_charge {
  id bigint [pk]
  criminal_case_id bigint [ref: > criminal_case.id]
  section_id bigint [ref: > legal_section.id]
  raw_section_text text
}

Table person_merge_candidate {
  id bigint [pk]
  person_lo bigint [ref: > person.id]  // min(id); ON DELETE SET NULL
  person_hi bigint [ref: > person.id]  // max(id); ON DELETE SET NULL
  score numeric
  band text            // auto_merge | review | reject
  evidence jsonb       // per-signal breakdown + {"pair":[lo,hi]}
  rule_version text
  status text          // pending | accepted | rejected | auto_merged
  decided_by text
  decided_at timestamptz
  indexes { (person_lo, person_hi) [unique] }
}

Table parliamentary_activity {
  id bigint [pk]
  person_id bigint [ref: > person.id]         // ON DELETE CASCADE
  house_id smallint [ref: > house.id]
  term_cycle_id bigint [ref: > term_cycle.id]
  questions_asked int                         // NULL = not reported (!= 0)
  debates_participated int
  private_member_bills int
  period_start date                           // PRS reporting window
  period_end date                             // data currency (as-of)
  source_ref_id bigint [ref: > source_ref.id] // ON DELETE SET NULL
  updated_at timestamptz
  indexes { (person_id, term_cycle_id) [unique] }
}

Table parliamentary_question {
  id bigint [pk]
  person_id bigint [ref: > person.id]         // ON DELETE CASCADE
  house_id smallint [ref: > house.id]
  term_cycle_id bigint [ref: > term_cycle.id]
  question_ref text                           // PRS annex id, e.g. "AS150"/"AU1111"
  subject text                                // question subject line
  ministry text
  question_type text                          // 'Starred' | 'Unstarred'
  asked_date date
  document_url text                           // official sansad.in/getFile PDF
  source_ref_id bigint [ref: > source_ref.id] // ON DELETE SET NULL
  updated_at timestamptz
  indexes { (person_id, term_cycle_id, question_ref) [unique] }
}

Table parliamentary_debate {
  id bigint [pk]
  person_id bigint [ref: > person.id]         // ON DELETE CASCADE
  house_id smallint [ref: > house.id]
  term_cycle_id bigint [ref: > term_cycle.id]
  debate_ref text                             // stable key: normalized(title|date)
  title text                                  // debate title / bill name
  debate_type text
  debate_date date
  document_url text                           // official sansad.in/getFile PDF
  source_ref_id bigint [ref: > source_ref.id] // ON DELETE SET NULL
  updated_at timestamptz
  indexes { (person_id, term_cycle_id, debate_ref) [unique] }
}

// Reference map (seeded): official ministry -> policy theme, for the read-time "Policy focus" breakdown.
Table ministry_theme {
  ministry_key text [pk]                      // lower(trim(ministry)) as in parliamentary_question
  theme text                                  // policy domain (Economy & Industry, Health, …)
}

// India Dashboard: curated catalog of country-level macro series (seeded from db/seeds/macro_indicators.sql).
Table macro_indicator_def {
  code text [pk]                              // source-native series code, e.g. 'NY.GDP.MKTP.CD'
  name text                                   // source's official series name
  unit text                                   // display unit ('US$', '%', 'years', …)
  format text                                 // render hint: usd_compact | pct | number | count_compact | count_in
  category text                               // dashboard section ('Economy & Growth', …)
  category_order smallint
  ind_order smallint
  polarity smallint                           // +1 higher-is-better, -1 lower-is-better, 0 neutral (0029)
  note text                                   // optional caveat (report + vintage a curated count came from) (0029)
}

// India Dashboard: fetched values — one row per indicator × country × year (World Bank v1; no person FK).
Table macro_indicator_value {
  indicator_code text [ref: > macro_indicator_def.code]
  country_code text                           // ISO alpha-3, 'IND'
  year int
  value numeric                               // never null: absent source years are absent rows
  source_ref_id bigint [ref: > source_ref.id]
  fetched_at timestamptz
  indexes { (indicator_code, country_code, year) [pk] }
}

// Ingestion control plane (Alembic pipeline_control_0001): operational state, not canonical facts.
Table pipeline_source_state {
  id int [pk]
  source_key text [unique]                     // manifest id, e.g. digital_sansad.members
  source_id smallint [ref: > source.id]        // nullable until the source seed is present
  manifest_hash text
  git_commit_sha text
  admin_overrides jsonb                         // accumulated fields explicitly pinned by admins
  effective_config jsonb                       // full validated scheduler snapshot
  enabled boolean
  paused boolean
  frequency_seconds int
  concurrency_limit int
  rate_limit_per_minute int
  retry_limit int
  active_revision bigint
  next_run_at timestamptz
  last_run_at timestamptz
  last_success_at timestamptz
  last_failure_at timestamptz
  consecutive_failures int
  quarantined_at timestamptz
  quarantined_by text
  quarantined_reason text
  created_at timestamptz
  updated_at timestamptz
}

Table pipeline_source_config_revision {
  id int [pk]
  source_state_id int [ref: > pipeline_source_state.id]
  revision bigint
  operation text                               // patch | reset
  patch jsonb                                  // submitted delta
  effective_config jsonb                       // full result after applying delta
  manifest_hash text
  git_commit_sha text
  changed_by text
  change_reason text
  created_at timestamptz
  indexes { (source_state_id, revision) [unique] }
}

Table pipeline_run_request {
  id int [pk]
  source_state_id int [ref: > pipeline_source_state.id]
  request_type text                            // run_now | retry | replay | backfill
  status text                                  // pending | accepted | running | succeeded | failed | cancelled
  parameters jsonb
  idempotency_key text
  requested_by text
  request_reason text
  requested_at timestamptz
  accepted_at timestamptz
  started_at timestamptz
  completed_at timestamptz
  error_message text
  indexes { (source_state_id, idempotency_key) [unique] }
}

// Durable Dagster execution (Alembic pipeline_execution_0002), created before sensor dispatch.
Table pipeline_run {
  id int [pk]
  source_state_id int [ref: > pipeline_source_state.id]
  run_request_id int [ref: > pipeline_run_request.id, unique]
  run_key text [unique]
  orchestrator_run_id text [unique]
  trigger text                                  // scheduled | run_now | retry | replay | backfill
  status text                                   // pending | running | succeeded | failed | cancelled
  manifest_hash text
  git_commit_sha text
  config_revision bigint
  converter text
  contract_version text
  runtime_config jsonb
  parameters jsonb
  retry_limit int
  attempt_count int
  scheduled_for timestamptz
  started_at timestamptz
  completed_at timestamptz
  error_message text
  created_at timestamptz
  updated_at timestamptz
}

Table pipeline_audit_event {
  id int [pk]
  source_state_id int [ref: > pipeline_source_state.id]
  actor text
  action text
  entity_type text
  entity_id text
  payload jsonb
  occurred_at timestamptz
}
